correction au niveau de innerHTML

--- a/jour 1/1-changer-contenu.html
+++ b/jour 1/1-changer-contenu.html
@@ -20,7 +20,7 @@
         <strong>id</strong>
     </p>
     <p>
-        <em>innerHTML</em> : est une méthode qui permet d'écrire sur une page html.
+        <em>innerHTML</em> : est une méthode qui permet d'écrire dans une page html.
     </p>
 </details>
 
